--- a/Assests/css/style.css
+++ b/Assests/css/style.css
@@ -11,6 +11,16 @@ background-color: var(--bgDark);
 
 }
 
+header {
+    margin-top: 5%;
+}
+
 h1 {
 color: var(--YoutubeRed);
+}
+
+form {
+ margin-left: 20%;
+ margin-right: 20%;
+ padding-top: 5%;
 }
