--- a/Assests/css/style.css
+++ b/Assests/css/style.css
@@ -12,11 +12,12 @@ background-color: var(--bgDark);
 }
 
 header {
-    margin-top: 5%;
+margin-top: 5%;
 }
 
 h1 {
 color: var(--YoutubeRed);
+text-shadow: 0px 0px 2px #000000;
 }
 
 form {
@@ -24,3 +25,4 @@ form {
  margin-right: 20%;
  padding-top: 5%;
 }
+
